# oscar.py

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  build.html  contribute.html  genindex.html  index.html  objects.inv  oscar.pxd  oscar.py  oscar.pyx  oscar.pyxbld  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tutorial.md
.github/workflows/: release.yml  test.yml
_modules/: index.html  oscar.html
_sources/: contribute.rst.txt  index.rst.txt
_static/: custom.css
docs/: DataFormat.md  Environment.md  Makefile  build.rst  conf.py  contribute.rst  index.rst
docs/_static/: custom.css
lib/: Makefile  config.status  myconf.h  tokyocabinet.pc
oscar/: __init__.py  utils.py
tests/: integration_test.py  local_test.env  unit_test.py  unit_test_cy.pyx
tests/fixtures/: commit_0.tch  commit_114.tch  commit_28.tch  commit_99.tch  create_fixtures.py  sha1.blob_125.tch  sha1.blob_3.tch  sha1.blob_35.tch  sha1.blob_70.tch  tree_0.tch  tree_84.tch
