[build-system]
requires = ["setuptools>=18.0", "wheel", "Cython"]

[tool.semantic_release]
version_variable = ['oscar.pyx:__version__', 'docs/conf.py:release']
# wheel build is performed by manylinux, so leave only sdist here
build_command = 'python setup.py sdist'
# remove_dist deletes all pre-existing files in dist/, including built by manylinux
remove_dist = false